test/fail/vt_alt00.v3
//@execute = false
type X {
	case None;
	case IsY(y: Y);
}
type Y {
	case None;
	case IsX(x: X);
}
def xn = X.None, yn = Y.None;
def xy = X.IsY(yn), yx = Y.IsX(xn);
def main() -> bool {
	return xn == xy || yn == yx;
}
